fix: Make window more smaller than the p5 shows to prevent overflow

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,6 @@
 
 html {
   scroll-snap-type: y mandatory;
-  overflow-x: hidden;
   scroll-behavior: smooth;
 }
 
